--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,12 @@ html, body, act-root, md-sidenav-container, .app-container, #appWrapper {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+
+.dark-theme .mat-input-placeholder.mat-focused, .dark-theme .mat-input-placeholder,
+.dark-theme .mat-select:focus:not(.mat-select-disabled) .mat-select-trigger {
+	color: mat-color($primary, lighter);
+}  
+
+.dark-theme .mat-select:focus:not(.mat-select-disabled) .mat-select-underline {
+	background: mat-color($primary, lighter);
+}
